--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-picker/picker": "^2.4.4",
     "@react-navigation/drawer": "^6.4.4",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
